# Ecosystem-Simulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  main.cpp  main.h  makeplot.py  removeheaders.py
Files/: settings.csv  settings.txt  statistics.csv
GTests/: AnimalBehaviourTests.cpp  AnimalTests.cpp  CMakeLists.txt  GridTests.cpp  MergingContainerTests.cpp  ResourceTests.cpp  SettingsCSVReaderTests.cpp  TileTests.cpp  UnitTestsTest.cpp
GTests/TestSettings/: GridTests.csv  SettingsTest.csv  SettingsTest2.csv
General/: Application.cpp  Application.h  EnvironmentHandler.cpp  EnvironmentHandler.h  FileManager.cpp  FileManager.h  Grid.cpp  Grid.h  SimulationManager.cpp  SimulationManager.h  Tile.cpp  Tile.h  main.cpp
General/Rendering/: GraphicAnimal.cpp  GraphicAnimal.h  GraphicTile.cpp  GraphicTile.h  Renderer.cpp  Renderer.h
General/SimulationEngine/: Grid.cpp  Grid.h  SimulationManager.cpp  SimulationManager.h  Tile.cpp  Tile.h
Simulation/: Animal.cpp  Animal.h  BreedingAnimal.cpp  BreedingAnimal.h  CarnivoreAnimal.cpp  FleeingAnimal.cpp  FleeingAnimal.h  GrassResource.cpp  GrassResource.h  HerbivoreAnimal.cpp  HerbivoreAnimal.h  HidingAnimal.cpp  HidingAnimal.h  IBrain.h  MeatResource.cpp  MeatResource.h  OmnivoreAnimal.cpp  Resource.cpp  Resource.h  ResourceTypeEnum.h  SimpleBrain.cpp  SimpleBrain.h  StealthyAnimal.cpp  StealthyAnimal.h
Simulation/ActionChoosers/: IActionChooser.cpp  IActionChooser.h
Simulation/ActionChoosers/AttackActionChooser/: AttackActionChooserDefault.cpp  AttackActionChooserDefault.h
Simulation/ActionChoosers/AttackActionChoosers/: AttackActionChooserDefault.cpp  AttackActionChooserDefault.h
Simulation/ActionChoosers/BreedActionChoosers/: ReproduceActionChooserSoloDefault.cpp  ReproduceActionChooserSoloDefault.h
Simulation/ActionChoosers/DieActionChooser/: DieActionChooserDefault.cpp
Simulation/ActionChoosers/DieActionChoosers/: DieActionChooserDefault.cpp  DieActionChooserDefault.h
Simulation/ActionChoosers/EatActionChoosers/: EatActionChooserDefault.cpp  EatActionChooserDefault.h
Simulation/ActionChoosers/MoveActionChooser/: MoveActionChooserNearestResourceTile.cpp  MoveActionChooserNearestResourceTile.h
Simulation/ActionChoosers/MoveActionChoosers/: MoveActionChooserNearestResourceTile.cpp  MoveActionChooserNearestResourceTile.h
Simulation/ActionChoosers/ReproduceActionChoosers/: ReproduceActionChooserSoloDefault.cpp  ReproduceActionChooserSoloDefault.h
Simulation/Actions/: Action.cpp  Action.h  ActionAttack.cpp  ActionAttack.h  ActionBreed.cpp  ActionBreed.h  ActionDie.cpp  ActionDie.h  ActionEat.cpp  ActionEat.h  ActionMove.cpp  ActionMove.h  ActionNone.cpp  ActionNone.h  ActionNull.cpp  ActionNull.h  ActionReproduce.cpp  ActionReproduce.h  ActionTypeEnum.h
Simulation/Animals/: Animal.cpp  Animal.h  AnimalTypeEnum.h  CarnivoreAnimal.cpp  CarnivoreAnimal.h  HerbivoreAnimal.cpp  HerbivoreAnimal.h  OmnivoreAnimal.h
Simulation/Brains/: Brain.cpp  Brain.h
Simulation/Resources/: GrassResource.cpp  GrassResource.h  MeatResource.cpp  MeatResource.h  Resource.cpp  Resource.h  ResourceTypeEnum.h
Simulation/Spawners/: Spawner.cpp  Spawner.h
Utilities/: Container.cpp  Container.h  MergingContainer.h  Renderer.cpp  Renderer.h  Statistics.cpp  Statistics.h  StatisticsManager.cpp  StatisticsManager.h  Tests.cpp  Tests.h  Utilities.cpp  Utilities.h
Utilities/FileHandling/: SettingsCSVReader.cpp  SettingsCSVReader.h
